[package]
authors = ["Stefan Rakel"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the BMP388 pressure sensor"
documentation = "https://docs.rs/bmp388"
keywords = ["embedded-hal-driver", "pressure"]
license = "MIT"
name = "bmp388"
repository = "https://github.com/ibutra/bmp388"
version = "0.1.0"
readme = "README.md"
edition = "2021"

rust-version = "1.62"

[features]
default = []

nightly = ["dep:embedded-hal-async"]
defmt-03 = ["dep:defmt"]
serde = ["dep:serde"]

[dependencies]
embedded-hal = "0.2"
embedded-hal-async = { version = "1.0.0-rc.3", optional = true }

defmt = { version = "0.3", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

num-traits = { version = "0.2", default-features = false, features = ["libm"] }